[package]
name = "blossom-auth"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to generate Blossom authorization events"
authors = ["0xtr <oxtrr@protonmail.com>"]
readme = "README.md"
homepage = "https://github.com/0xtrr/blossom-auth"
repository = "https://github.com/0xtrr/blossom-auth"
license = "LICENSE.txt"
keywords = ["blossom", "tool", "nostr"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
nostr-sdk = "0.33.0"
sha2 = "0.10.8"
rand = "0.8.5"
hex = "0.4.3"
